implement get all employees endpoint and delete employee account endpoint